# CGassignments

./: .gitignore  CMakeLists.txt
include/: almostgl.h  camera.h  matrix.h  mesh.h  ogl.h  param.h  primitives.h
shaders/: almostgl.fs  almostgl.vs  passthrough.fs  passthrough.vs
src/: almostgl.cpp  main.cpp  matrix.cpp  mesh.cpp  ogl.cpp
